# Adding_notes_mcp-server-_mcp_client

./: README.md  mcp_streamable_http_client.py  pyproject.toml  streamable_http_server.py
