[project]
name = "pydantic-ai_web-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.120.4",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "pydantic-ai>=0.1.0",
    "starlette>=0.49.3",
    "uvicorn>=0.38.0",
]
